work/65/Chain_Java/compile_stderr.txt
unknown_0.java:1: error: class, interface, or enum expected
noClass HelloWorldApp {
^
unknown_0.java:2: error: class, interface, or enum expected
	  public static void main(String[] args) {
	                ^
unknown_0.java:4: error: class, interface, or enum expected
    }
    ^
3 errors
